--- a/template-s4hana-cloud-extension/ui/view/App.view.xml.template
+++ b/template-s4hana-cloud-extension/ui/view/App.view.xml.template
@@ -15,6 +15,9 @@
 					  	</content>
 					 </OverflowToolbar>
 					</headerToolbar>
+					<dependents>
+						<mvc:XMLView id="detailsView" viewName="${projectName}.view.Details" />
+					</dependents>
 					<columns>
 						<Column />
 						<Column hAlign="Right" />
