--- a/template-s4hana-cloud-extension/ui/controller/App.controller.js.template
+++ b/template-s4hana-cloud-extension/ui/controller/App.controller.js.template
@@ -53,7 +53,12 @@ sap.ui.define([
 				url: Config.serviceUrl + "/${dataName}",
 				data: JSON.stringify({
 #foreach ($property in $properties)
+#if($property.widgetIsMajor)
 					${property.widgetService}: sap.ui.getCore().getElementById("${property.name}Input").getValue()#if($foreach.hasNext),
+#end
+#else
+					${property.widgetService}: "${property.dataDefaultValue}"#if($foreach.hasNext),
+#end
 #end
 #end
 
