Adds table column labels

--- a/template-s4hana-cloud-extension/ui/view/App.view.xml.template
+++ b/template-s4hana-cloud-extension/ui/view/App.view.xml.template
@@ -21,7 +21,7 @@
 					<columns>
 #foreach ($property in $properties)
 #if($property.widgetIsMajor)
-						<Column />
+						<Column><Text text="$property.name"></Text></Column>
 #end
 #end
 					</columns>
